# AgriPulse

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  renovate.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  app_factory.py  errors.py  logging.py  observability.py  settings.py
backend/app/modules/: __init__.py
backend/app/modules/alerts/: __init__.py  engine.py  errors.py  events.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/modules/analytics/: __init__.py  events.py  service.py
backend/app/modules/audit/: __init__.py  events.py  models.py  service.py
backend/app/modules/farms/: __init__.py  auto_grid.py  blocks_summary_router.py  cascade.py  config_router.py  config_schemas.py  config_template.py  consistency_check.py  crop_thresholds.py  errors.py  events.py  geometry.py  models.py  pivot_geometry.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/modules/forecasting/: __init__.py  events.py  service.py
backend/app/modules/grid/: __init__.py  anomaly.py  backfill.py  errors.py  geometry.py  models.py  polar_label.py  repository.py  router.py  schemas.py  service.py  snapshot.py  tasks.py  zonal.py
backend/app/modules/iam/: __init__.py  events.py  models.py  reconcile.py  repository.py  router.py  schemas.py  service.py  tasks.py  users_service.py
backend/app/modules/imagery/: __init__.py  _rasterio_io.py  errors.py  events.py  models.py  pgstac.py  repository.py  router.py  schemas.py  service.py  storage.py  subscribers.py  tasks.py
backend/app/modules/indices/: __init__.py  baselines.py  computation.py  events.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py  trends.py
backend/app/modules/insights/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/integrations/: router.py  schemas.py  service.py
backend/app/modules/integrations_health/: error_codes.py  probes.py  providers_service.py  router.py  schemas.py  service.py  streak_watcher.py
backend/app/modules/irrigation/: __init__.py  engine.py  errors.py  events.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/modules/notifications/: __init__.py  errors.py  events.py  models.py  repository.py  router.py  schemas.py  service.py  smtp.py  subscribers.py  templates.py  webhook.py
backend/app/modules/plans/: __init__.py  errors.py  events.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/platform_admins/: admins_router.py  admins_service.py  bootstrap.py  guardrails.py  health_rollup.py  health_tenant_drill.py  router.py  service.py  tenant_integrations.py
backend/app/modules/platform_defaults/: router.py
backend/app/modules/recommendations/: __init__.py  engine.py  errors.py  events.py  loader.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/modules/reports/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/resources/: __init__.py  errors.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/signals/: __init__.py  aggregation.py  csv_import.py  errors.py  events.py  models.py  repository.py  router.py  schemas.py  service.py  snapshot.py
backend/app/modules/tenancy/: __init__.py  bootstrap.py  events.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/weather/: __init__.py  derivations.py  errors.py  events.py  models.py  repository.py  router.py  schemas.py  service.py  snapshot.py  tasks.py  timezone.py
backend/app/shared/: __init__.py  health.py  pagination.py  realtime.py
backend/app/shared/auth/: __init__.py  context.py  jwt.py  middleware.py  tenant_status.py
backend/app/shared/conditions/: __init__.py  context.py  errors.py  evaluator.py  models.py
backend/app/shared/correlation/: __init__.py  middleware.py
backend/app/shared/db/: __init__.py  base.py  blocks.py  ids.py  session.py
backend/app/shared/eventbus/: __init__.py  bus.py
backend/app/shared/keycloak/: __init__.py  client.py  errors.py  fakes.py
backend/app/shared/rbac/: __init__.py  capabilities.yaml  check.py  role_capabilities.yaml
backend/app/shared/settings/: __init__.py  errors.py  models.py  repository.py  resolver.py
backend/app/shared/storage/: __init__.py  client.py  keys.py
backend/migrations/public/: env.py
backend/migrations/public/versions/: 0001_extensions_and_uuid_v7.py  0002_tenancy_tables.py  0003_iam_tables.py  0004_fix_uuid_v7_byte_count.py  0005_farms_crop_catalog.py  0006_seed_egyptian_crops.py  0007_pgstac_imagery_indices_catalog.py  0008_seed_imagery_catalog.py  0009_weather_catalog.py  0010_seed_weather_catalog.py  0011_crop_thresholds.py  0012_alerts_default_rules.py  0013_subscription_enrichment.py  0014_notification_templates.py  (+15 more)
backend/migrations/tenant/: env.py
backend/scripts/: apply_grid_retention.py  dev_bootstrap.py  dev_keycloak_admin_client.py  dev_keycloak_smtp.py  dev_promote_platform_admin.py  dev_setup_grid.py  grid_backfill.py  migrate_tenants.py  seed_tenant.py
backend/tests/integration/: conftest.py  test_me_flow.py  test_search_path_isolation.py  test_tenant_creation.py
backend/tests/unit/: conftest.py  test_correlation.py  test_eventbus.py  test_jwt.py  test_keycloak_invite_fallback.py  test_keycloak_provisioning_guard.py  test_keycloak_realm_roles.py  test_keycloak_reconcile.py  test_rbac.py  test_seed_tenant.py  test_settings.py
backend/workers/: __init__.py  celery_factory.py
backend/workers/beat/: __init__.py  main.py
backend/workers/heavy/: __init__.py  main.py
backend/workers/light/: __init__.py  main.py
backend/workers/tasks/: __init__.py  eventbus_dispatch.py
scripts/imagery-backfill/: pyproject.toml
scripts/imagery-backfill/imagery_backfill/: __init__.py  __main__.py  aoi.py  cli.py  indices.py  manifest.py  rasterio_io.py  sentinel_hub.py  upload_resilient.py  upload_to_local.py
(+862 files in other folders)
