[project]
name = "missionagre-backend"
version = "0.1.0"
description = "MissionAgre backend — multi-tenant farm management API."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "MissionAgre" }]

dependencies = [
  # Web framework
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "pydantic[email]>=2.9,<3",
  "pydantic-settings>=2.6,<3",

  # Database
  "sqlalchemy[asyncio]>=2.0.36,<2.1",
  "asyncpg>=0.30,<0.31",
  "psycopg[binary]>=3.2,<3.3",   # used by Alembic in sync mode
  "alembic>=1.14,<1.15",
  "geoalchemy2>=0.16,<0.17",

  # Background work
  "celery>=5.4,<5.5",
  "redis>=5.2,<5.3",

  # Auth
  "python-jose[cryptography]>=3.3,<3.4",
  "httpx>=0.27,<0.28",

  # RBAC config + general YAML
  "pyyaml>=6.0,<6.1",

  # Observability
  "structlog>=24.4,<25",
  "opentelemetry-api>=1.28,<2",
  "opentelemetry-sdk>=1.28,<2",
  "opentelemetry-exporter-otlp>=1.28,<2",
  "opentelemetry-instrumentation-fastapi>=0.49b0,<1",
  "opentelemetry-instrumentation-sqlalchemy>=0.49b0,<1",
  "opentelemetry-instrumentation-celery>=0.49b0,<1",
  "opentelemetry-instrumentation-httpx>=0.49b0,<1",
  "opentelemetry-instrumentation-asgi>=0.49b0,<1",
  "prometheus-fastapi-instrumentator>=7.0,<8",
]

[project.optional-dependencies]
dev = [
  # Test runner
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
  "pytest-cov>=6.0,<7",
  "anyio>=4.6,<5",
  "freezegun>=1.5,<2",
  "testcontainers[postgres,redis]>=4.8,<5",

  # Lint / format / type
  "ruff>=0.7,<0.8",
  "black>=24.10,<25",
  "mypy>=1.13,<2",
  "import-linter>=2.1,<3",

  # Stubs
  "types-PyYAML>=6,<7",
  "types-python-jose>=3,<4",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# --- uv ---------------------------------------------------------------------
[tool.uv]
dev-dependencies = []  # already in optional [dev] above

# --- ruff -------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations/*/versions"]

[tool.ruff.lint]
select = [
  "E", "F", "W",     # pycodestyle / pyflakes
  "I",                # isort
  "B",                # bugbear
  "C4",               # comprehensions
  "UP",               # pyupgrade
  "SIM",              # simplify
  "TID",              # tidy imports
  "RUF",              # ruff-specific
  "PT",               # pytest
  "S",                # bandit (security)
  "PL",               # pylint subset
]
ignore = [
  "E501",   # line length handled by formatter
  "PLR0913", # too-many-arguments (FastAPI deps make this noisy)
  "S101",    # asserts are fine in tests
  "S104",    # binding 0.0.0.0 is fine in containers
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S311", "PLR2004"]
"migrations/**/*.py" = ["E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["app", "workers"]

# --- black ------------------------------------------------------------------
[tool.black]
target-version = ["py312"]
line-length = 100

# --- mypy -------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]
exclude = ["migrations/", "tests/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = [
  "celery.*",
  "geoalchemy2.*",
  "prometheus_fastapi_instrumentator.*",
  "opentelemetry.*",
  "testcontainers.*",
]
ignore_missing_imports = true

# --- pytest -----------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-report=xml",
]
markers = [
  "integration: integration tests that require Postgres/Redis containers",
  "slow: tests that take more than 5 seconds",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pkg_resources.*",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["migrations/*", "tests/*", "app/main.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
]

# --- import-linter ----------------------------------------------------------
# Contracts live in .importlinter at backend/ root for separation.
